# tct-configurations

./: README.md
tct-bundle-3.3/: README.md  stack.yaml  tct-bundle.cabal
tct-bundle-3.3/tct-paicc/: Main.hs
tct-bundle-3.3/tct-trs/: Main.hs
termcomp2015/: Certify.hs  DC.hs  Main.hs  RC.hs  README.md  stack.yaml  tct.cabal
termcomp2016/: Its.hs  Main.hs  README.md  stack.yaml  tct.cabal
termcomp2018/: LICENSE  README.md  stack.yaml  tct.cabal
