
name:                tct
version:             0.0.0.0
license-file:        LICENSE
author:              Michael Schaper
maintainer:          michael.schaper@uibk.ac.at
build-type:          Simple
cabal-version:       >=1.10

executable tct
  main-is:             Main.hs
  default-extensions:          FlexibleInstances, MultiParamTypeClasses
  build-depends:       base, tct-core, tct-trs
  default-language:    Haskell2010
  ghc-options:         -O2 -threaded -with-rtsopts=-N
